--- a/calculator/index.html
+++ b/calculator/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Cumculator</title>
+        <title>Калькулятор</title>
         <link rel="stylesheet" href="style.css" class="style">
         <script defer src="calc.js"></script>
     </head>
